Roles limits ok all ok , fix role access

--- a/backend/templates/frontend/assets.html
+++ b/backend/templates/frontend/assets.html
@@ -1,4 +1,5 @@
 {% extends 'frontend/base.html' %}
+{% load custom_filters %}
 
 {% block title %}Assets Management - IT Management Platform{% endblock %}
 
