--- a/backend/templates/frontend/projects.html
+++ b/backend/templates/frontend/projects.html
@@ -1,4 +1,5 @@
 {% extends 'frontend/base.html' %}
+{% load custom_filters %}
 
 {% block title %}Projects Management - IT Management Platform{% endblock %}
 
@@ -67,6 +68,7 @@
                 <tbody class="divide-y divide-gray-200">
                     {% if projects %}
                         {% for project in projects %}
+                        {% with project_perms=permissions_map|get_item:project.id %}
                         <tr class="hover:bg-gray-50 transition project-row" data-id="{{ project.id }}">
                             <td class="px-3 sm:px-6 py-2 sm:py-4 font-medium text-gray-900">{{ project.name }}</td>
                             <td class="px-3 sm:px-6 py-2 sm:py-4 text-gray-600 hidden md:table-cell">{{ project.description|truncatewords:10 }}</td>
@@ -83,7 +85,7 @@
                             <td class="px-3 sm:px-6 py-2 sm:py-4 text-gray-600 hidden lg:table-cell">{{ project.start_date|date:"Y-m-d" }}</td>
                             <td class="px-3 sm:px-6 py-2 sm:py-4">
                                 <div class="flex gap-1 sm:gap-4 text-xs sm:text-sm">
-                                    {% if permissions_map[project.id].can_update %}
+                                    {% if project_perms.can_update %}
                                         <a href="{% url 'frontend:edit-project' project.id %}" class="text-blue-600 hover:text-blue-900">
                                             Edit
                                         </a>
@@ -93,7 +95,7 @@
                                         </span>
                                     {% endif %}
 
-                                    {% if permissions_map[project.id].can_delete %}
+                                    {% if project_perms.can_delete %}
                                         <button onclick="deleteProject({{ project.id }}, '{{ project.name|escapejs }}')"
                                                 class="text-red-600 hover:text-red-900 bg-none border-none cursor-pointer">
                                             Delete
@@ -103,6 +105,7 @@
                                 </div>
                             </td>
                         </tr>
+                        {% endwith %}
                         {% endfor %}
                     {% else %}
                         <tr>
